--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,8 @@ p {
 #p2Name,
 #p2Total,
 #currentRoll,
-#roundPoints {
+#roundPoints,
+#memo {
   font-size: 1.5rem;
 }
 
@@ -47,4 +48,9 @@ p {
 
 #p2Score {
   background-color: #7897ab;
+}
+
+#memoRow {
+  padding-top: 15px;
+  background-color: #fdceb9;
 }
